Chapter 12/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Alex\Documents\GitHub\GridWorld\gridworld.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12
-d
C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\DrawingPanel.java
<---- end of javadoc command ---->
Loading source file C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\DrawingPanel.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_60
Building tree for all the packages and classes...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\DrawingPanel.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\DrawingPanel.MyMouseListener.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\DrawingPanel.MyMouseMotionListener.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\package-frame.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\package-summary.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\constant-values.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\serialized-form.html...
C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\Square.java:23: error: ')' expected
        if (point 
                 ^
C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\Square.java:24: error: illegal start of statement
    }
    ^
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\allclasses-frame.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\allclasses-noframe.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\index.html...
Generating C:\Users\Alex\Documents\GitHub\unit7ObjectOrientedDesign\Chapter 12\doc\stylesheet.css...
2 errors
